infra/scenarios/azure_kubernetes_playground/examples/kubernetes_basics/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workshop-basics
  labels:
    app.kubernetes.io/part-of: kubernetes-basics
